# Equac_second

./: .gitignore  CMakeLists.txt  LICENSE  equa_second.c  main.c  readme.md
includes/: index.h
src/: clear_screen.c  equationSecond.c  functionTypeOfNumbersEquac.c  functionWelcomeAndEndScreen.c  functionWriteEquationSecond.c
